--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,7 +1,7 @@
 /******* Customized Bootstrap ********/
 
 $primary: #008ed0;
-$secondary:#17303B;
+$secondary:#5d266a;
 $light: #F8F8F8;
 $dark: #111111;
 
