--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@
 
     .navbar-light .navbar-collapse {
         margin-top: 15px;
-        border-top: 1px solid #DDDDDD;
+        border-top: 1px solid #999999;
     }
 
     .navbar-light .navbar-nav .nav-link,
